# DevCenter

./: Design.md  README.md
.github/workflows/: ci.yml  ci.yml.bak  generate-updater-keys.yml  release.yml  release.yml.bak
app/: updater.conf.json
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.conf.json.bak
app/src-tauri/capabilities/: default.json  splash.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: error.rs  git.rs  gitconfig.rs  lib.rs  main.rs  models.rs  secrets.rs  state.rs  store.rs
app/src-tauri/src/apps/: mod.rs  runner.rs  serve.rs
app/src-tauri/src/commands/: accounts.rs  apps.rs  git.rs  gitconfig.rs  mod.rs  os.rs  pr.rs
app/src-tauri/src/pr/: azure.rs  github.rs  mod.rs
app/ui/: index.html  splash.html
app/ui/css/: styles.css
app/ui/js/: api.js  app-center.js  app.js  backend.js  branches.js  changes.js  components.js  conflict.js  core.js  file-tree.js  git-board.js  git-identity.js  helpers.js  highlight.js  logfmt.js  pr-reviewer.js  pull-requests.js  seti-icons.js  store.js  tags.js  theme.js  wiring.js
app/ui2/: .gitignore  index.html  package.json  plan.md  tsconfig.json  vite.config.ts
app/ui2/public/: theme.js
app/ui2/public/css/: fonts.css  styles.css
app/ui2/src/: app.tsx  main.tsx  vite-env.d.ts
app/ui2/src/components/: Avatar.module.css  Avatar.tsx  BranchPicker.module.css  BranchPicker.tsx  DiffView.module.css  DiffView.tsx  Layout.module.css  Layout.tsx  Multiselect.module.css  Multiselect.tsx  Navigation.module.css  Navigation.tsx  PaneResizer.module.css  PaneResizer.tsx  TagEditor.module.css  TagEditor.tsx  menu.module.css  menu.tsx  modal.module.css  modal.tsx
app/ui2/src/lib/: file-tree.module.css  file-tree.tsx  floating.module.css  floating.ts  helpers.ts  ico.module.css  ico.tsx  icons.tsx  logfmt.ts  tooltip.module.css  tooltip.ts  updater.ts
app/ui2/src/pages/accounts/: Accounts.module.css  Accounts.tsx
app/ui2/src/pages/app-center/: AppCenter.module.css  AppCenter.tsx
app/ui2/src/pages/changes/: Changes.module.css  Changes.tsx
app/ui2/src/pages/conflict/: ConflictResolver.module.css  ConflictResolver.tsx
app/ui2/src/pages/git-board/: GitBoard.module.css  GitBoard.tsx
app/ui2/src/pages/identities/: Identities.module.css  Identities.tsx
app/ui2/src/pages/pr-reviewer/: PrReviewer.module.css  PrReviewer.tsx
app/ui2/src/pages/pull-requests/: PullRequests.module.css  PullRequests.tsx
app/ui2/src/platform/: brand.ts  events.ts  ipc.ts  tauri.ts
app/ui2/src/state/: accounts.ts  apps.ts  changes.ts  conflict.ts  pulls.ts  repos.ts  reviewer.ts  ui.ts
app/ui2/src/types/: models.ts
docs/: auto-update-setup.md  index.html
scripts/: dev.ps1  fetch-fonts.ps1  gen-seti-icons.ps1  make-icon.ps1
