[package]
name = "app"
version = "0.1.0"
description = "DevGitCenter — track repos, pull requests and local apps"
authors = ["Bipul Raman"]
edition = "2021"
rust-version = "1.77"

# The library powers the desktop binary. (cdylib/staticlib are only needed for
# mobile targets; they're omitted because the Windows GNU linker overflows its
# export-ordinal table when building the cdylib DLL. Re-add them for mobile.)
[lib]
name = "app_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# `vendored-openssl` makes libgit2/libssh2 compile OpenSSL from source for the
# build target instead of probing for a system copy via pkg-config. Required to
# cross-compile the x86_64 macOS bundle on the arm64 CI runner (pkg-config can't
# find a prebuilt OpenSSL for the other arch), and it removes the reliance on a
# system OpenSSL on Linux. No-op on Windows (libssh2 uses WinCNG, not OpenSSL).
git2 = { version = "0.19", features = ["vendored-openssl"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "macros", "sync", "time", "net"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["fs"] }

# --- Added in later phases (kept here as a reference; uncomment when needed) ---
# tauri-plugin-shell = "2"
# tauri-plugin-process = "2"
# sysinfo = "0.32"
# tracing = "0.1"
# tracing-subscriber = "0.3"

# Tuned for fast release builds. Thin LTO with parallel codegen units compiles
# dramatically faster than fat LTO (`lto = true`) + `codegen-units = 1`, which
# re-optimizes the whole crate graph single-threaded at link time on every
# build — the main reason the build/sign/publish job was slow. Binary stays
# small via `opt-level = "s"` + `strip`. (For an even faster build at the cost
# of a slightly larger binary, set `lto = false`.)
[profile.release]
codegen-units = 16
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
